public/css/starter-template.css
body {
  padding-top: 60px;
  background-image: url("/images/field.jpg");
  background-size: 100%;
  background-attachment: fixed;
}

.body-container {
  background-color: rgba(255, 255, 255, 0.6);
  margin-top: -9px;
  padding-bottom: 15px;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
}

.logo {
  min-height: 25vh;
  max-height: 80vh;
}

.trophy {
  max-height: 348px;
}

.race-portrait {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0; 
  background-color: white; 
  padding: 5px;
}

.ellipsis {
    overflow: hidden;
    text-overflow: ellipsis;
    display: -webkit-box;
    -webkit-line-clamp: 3;
    -webkit-box-orient: vertical;
    max-width: 296px;
}

a:hover.no-underline, a:link.no-underline {
  text-decoration: none;
}

.panel-heading[data-toggle="collapse"] {
  cursor: pointer;
}

.player-improvement {
  background-color: yellowgreen;
}

.player-injury {
  background-color: lightcoral;
}

.versus {
  padding-top: 30px;
  padding-bottom: 30px;
  font-size: 40px;
}

.scoreboard {
  font-size: 40px;
  margin-top: 0px;
  margin-bottom: 0px;
  border-left: 1px solid black;
  border-bottom: 1px solid black;
  border-right: 1px solid black;
  font-family: "Arbutus", cursive;
}

.jumbotron.match-jumbotron {
  padding-top: 0px;
}

}

.match-header-number {
  width: 10px;
}

.match-header-rotated {
  height: 63px;
  white-space: nowrap;
}

@media (min-width: 769px) {
  .match-header-rotated > div {
    transform: translate(4px, 2px) rotate(270deg);
    width: 5px;
  }

  .match-value > div {
    width: 5px;
    position: relative;
    left: 4px;
  }

  .match-skills {
    width: 200px;
  }
}

@media (max-width: 768px) {
  .match-header-rotated > div {
    transform: translate(1px, 2px) rotate(270deg);
    width: 5px;
  }
  
  .match-value > div {
    width: 5px;
    position: relative;
    left: -2px;
  }

  .match-roster {
    position: relative;
    left: -15px;
  }
}

.match-player-none {
  background-color: hsla(0, 0%, 96%, 1);
}

h3.panel-title a {
  color: #337ab7;
}

.fb {
  padding: 0px;
}

.table>tbody>tr.vert-center>td, .table>tbody>tr.vert-center>th, .table>tfoot>tr.vert-center>td, .table>tfoot>tr.vert-center>th, .table>thead>tr.vert-center>td, .table>thead>tr.vert-center>th {
  vertical-align: middle;
}

